--- a/newsproject/news/templates/news/add_news.html
+++ b/newsproject/news/templates/news/add_news.html
@@ -6,9 +6,43 @@
     {% include 'news/inc/_sidebar.html' %}
 {% endblock %}
 {% block content %}
-    <h1>Добавление новости</h1>
-    <form action="{% url 'add_news' %}" method="post">
-    {{ form.as_p }}
-    </form>
-
+    <div class="card mb-3">
+        <div class="card-body">
+            <h1>Добавление новости</h1>
+            <form action="{% url 'add_news' %}" method="post">
+                {% csrf_token %}
+                {{ form.non_field_errors }}
+                <div class="mb-3">
+                    <label for="{{ form.title.id_for_label }}" class="form-label">Название: </label>
+                    {{ form.title }}
+                    <div class="invalid-feedback">
+                        {{ form.title.errors }}
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="{{ form.content.id_for_label }}" class="form-label">Содержание: </label>
+                    {{ form.content }}
+                    <div class="invalid-feedback">
+                        {{ form.content.errors }}
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="{{ form.is_published.id_for_label }}" class="form-label">Опубликовать: : </label>
+                    {{ form.is_published }}
+                    <div class="invalid-feedback">
+                        {{ form.is_published.errors }}
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="{{ form.category.id_for_label }}" class="form-label">Категория: : </label>
+                    {{ form.category }}
+                    <div class="invalid-feedback">
+                        {{ form.category.errors }}
+                    </div>
+                </div>
+                {#                {{ form.as_p }}#}
+                <button type="submit" class="btn btn-primary btn-block">Добавить новость</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
