--- a/newsproject/news/templates/news/add_news.html
+++ b/newsproject/news/templates/news/add_news.html
@@ -12,10 +12,11 @@
             <form action="{% url 'add_news' %}" method="post">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
+
                 <div class="mb-3">
                     <label for="{{ form.title.id_for_label }}" class="form-label">Название: </label>
                     {{ form.title }}
-                    <div class="invalid-feedback">
+                    <div class="errorlist">
                         {{ form.title.errors }}
                     </div>
                 </div>
@@ -29,18 +30,31 @@
                 <div class="mb-3">
                     <label for="{{ form.is_published.id_for_label }}" class="form-label">Опубликовать: : </label>
                     {{ form.is_published }}
-                    <div class="invalid-feedback">
+                    <div class="errorlist">
                         {{ form.is_published.errors }}
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="{{ form.category.id_for_label }}" class="form-label">Категория: : </label>
                     {{ form.category }}
-                    <div class="invalid-feedback">
+                    <div class="errorlist">
                         {{ form.category.errors }}
                     </div>
                 </div>
+                
+
                 {#                {{ form.as_p }}#}
+                {% comment %}
+                {% for field in form %}
+                <div class="mb-3">
+                    {{ field.label_tag }}
+                    {{ field }}
+                    <div class="invalid-feedback">
+                        {{ field.errors }}
+                    </div>
+                </div>
+                {% endfor %}
+             {% endcomment %}
                 <button type="submit" class="btn btn-primary btn-block">Добавить новость</button>
             </form>
         </div>
