--- a/newsproject/templates/news/base.html
+++ b/newsproject/templates/news/base.html
@@ -1,27 +1,31 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
     <title>{% block title %}Жаркие новости{% endblock title %}</title>
-  </head>
-  <body>
+    <style>
+    .banner img {
+        width: 100%;
+        height: 100%; /* Установим автоматическую высоту, чтобы сохранить пропорции изображения */
+        object-fit: cover; /* Обрежем изображение по высоте, чтобы соответствовало высоте баннера */
+    } </style>
+</head>
+<body>
 {% include 'news/inc/_nav.html' %}
-    <div class="container mt-3">
-      <div class="row">
-      <div class="col-md-3">
-        {% block sidebar %}{% endblock sidebar %}
-      </div>
-      <div class="col-md-9">
-        {% block content %}{% endblock content %}
-      </div>
-      </div>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-md-3">
+            {% block sidebar %}{% endblock sidebar %}
+        </div>
+        <div class="col-md-9">
+            {% block content %}{% endblock content %}
+        </div>
     </div>
-
-    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  </body>
+</div>
+<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+</body>
 </html>
