--- a/newsproject/templates/news/base.html
+++ b/newsproject/templates/news/base.html
@@ -10,8 +10,8 @@
     <style>
     .banner img {
         width: 100%;
-        height: 100%; /* Установим автоматическую высоту, чтобы сохранить пропорции изображения */
-        object-fit: cover; /* Обрежем изображение по высоте, чтобы соответствовало высоте баннера */
+        height: 100%;
+        object-fit: cover;
     } </style>
 </head>
 <body>
