--- a/newsproject/news/templates/news/index.html
+++ b/newsproject/news/templates/news/index.html
@@ -3,15 +3,14 @@
 {% load news_tags %}
 
 {% block title %}
-    {{ title }} :: {{ block.super }}
+    Новости :: {{ block.super }}
 {% endblock title %}
 
 {% block sidebar %}
     {% include "news/inc/_sidebar.html" %}
-    {#    {% show_categories %}#}
-{% endblock %}
-{% block content %}
+{% endblock sidebar %}
 
+{% block content %}
     {% for item in all_news %}
         <div class="card mb-3">
             <div class="card-header">
@@ -28,4 +27,32 @@
         </div>
     {% endfor %}
 
+    <!--  пагинация -->
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if is_paginated %}
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+                {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                        <li class="page-item active"><a class="page-link">{{ num }}</a></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+            {% endif %}
+        </ul>
+    </nav>
 {% endblock content %}
